2005-10-25  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/PositiveTimeSpanValidatorTest.cs: new test.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/TimeSpanSecondsOrInfiniteConverterTest.cs:
	new test.

	* System.Configuration/TypeNameConverterTest.cs: new test.

	* System.Configuration/WhiteSpaceTrimStringConverterTest.cs: new
	test.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* standalone/Makefile: hide the output from cmp.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/ConfigurationPermissionTest.cs: lots more
	tests.

	* System.Configuration/KeyValueConfigurationCollectionTest.cs: add
	ThrowOnDuplicate check.

2005-10-12  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/ConfigurationPermissionTest.cs: turn the
	Console.WriteLines into actual assertions.

2005-10-12  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/KeyValueConfigurationCollectionTest.cs: add
	some duplicate add tests.

	* System.Configuration/CommaDelimitedStringCollectionTest.cs:
	correct for 2.0 RC.

	* System.Configuration/KeyValueConfigurationElementTest.cs:
	correct for 2.0 RC.

2005-10-06  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/KeyValueConfigurationCollectionTest.cs: new
	tests.

	* System.Configuration/KeyValueConfigurationElementTest.cs: new
	tests.

2005-10-06  Raja R Harinath  <rharinath@novell.com>

	* System.Configuration/ConfigurationManagerTest.cs
	(exePath_UserLevelNone_absolute, exePath_UserLevelNone)
	(exePath_UserLevelNone_null): Disable compilation.  The
	corresponding overloads don't exist.

2005-10-05  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/TimeSpanMinutesOrInfiniteConverterTest.cs:
	new tests.

2005-10-05  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/TimeSpanSecondsConverterTest.cs: new tests.

2005-10-05  Chris Toshok  <toshok@ximian.com>

	* System.Configuration/TimeSpanMinutesConverterTest.cs: new tests.
